--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-svg": "^9.6.4",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
