--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.60.5",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-half-modal": "^0.2.3",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.6.4",
     "react-navigation": "^3.11.1"
