semimodal is avaiable now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "strict": true,
     "target": "esnext"
   },
+  "files": ["index.d.ts"],
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
