--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-half-modal": "^0.2.3",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.6.4",
+    "react-native-video": "^5.0.0",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
