--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-half-modal": "^0.2.3",
+    "react-native-raw-bottom-sheet": "^2.0.2",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.6.4",
     "react-native-video": "^5.0.0",
