--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.60.5",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-orientation-locker": "^1.1.6",
     "react-native-raw-bottom-sheet": "^2.0.2",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.6.4",
