--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.13.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-blur-overlay": "^1.0.7",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-orientation-locker": "^1.1.6",
