--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "fuzzball": "^1.3.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "native-base": "^2.13.5",
